// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SummaryReportGenerator schema stability keeps section IDs and types identical across market/source modes 1`] = `
[
  {
    "id": "summary.contract",
    "type": "text",
  },
  {
    "id": "summary.overview",
    "type": "kpi",
  },
  {
    "id": "summary.activity",
    "type": "kpi",
  },
  {
    "id": "summary.allocation",
    "type": "kpi",
  },
  {
    "id": "summary.exposure",
    "type": "kpi",
  },
  {
    "id": "summary.risk",
    "type": "kpi",
  },
  {
    "id": "summary.open_positions",
    "type": "table",
  },
  {
    "id": "summary.top_holdings",
    "type": "table",
  },
  {
    "id": "summary.symbol_pnl",
    "type": "table",
  },
  {
    "id": "summary.bots",
    "type": "table",
  },
  {
    "id": "summary.alerts",
    "type": "alerts",
  },
  {
    "id": "summary.data_completeness",
    "type": "alerts",
  },
]
`;

exports[`SummaryReportGenerator schema stability produces stable snapshots for linear category sections 1`] = `
[
  {
    "id": "summary.contract",
    "text": [
      "Summary scope: market activity account review.",
      "Context: linear / market",
      "Live snapshot as of: 2026-01-31T00:00:00.000Z",
      "Coverage: trading activity and account PnL over the requested window",
      "Live metrics: balances, holdings, exposure, risk, and open positions.",
      "Period: 2026-01-01T00:00:00.000Z -> 2026-01-31T00:00:00.000Z",
      "Period end-state: unsupported — Historical period end-state is unavailable",
      "ROI status: unsupported",
      "ROI unsupported reason: ending equity is unavailable for the requested period window",
      "This summary emphasizes account equity, trading activity, and period PnL.",
    ],
    "title": "Summary Context",
    "type": "text",
  },
  {
    "id": "summary.overview",
    "kpis": [
      {
        "label": "Total Equity",
        "value": "$10,000.00",
      },
      {
        "label": "Net PnL",
        "value": "$439.00",
      },
      {
        "label": "Realized PnL",
        "value": "$280.00",
      },
      {
        "label": "Unrealized PnL",
        "value": "$180.00",
      },
      {
        "label": "ROI",
        "value": "unsupported",
      },
      {
        "label": "Tracked Bots",
        "value": "0",
      },
    ],
    "title": "Overview",
    "type": "kpi",
  },
  {
    "id": "summary.activity",
    "kpis": [
      {
        "label": "Traded Symbols",
        "value": "2",
      },
      {
        "label": "Total Trades",
        "value": "13",
      },
      {
        "label": "Winning Symbols",
        "value": "2",
      },
      {
        "label": "Losing Symbols",
        "value": "0",
      },
      {
        "label": "Symbol Win Rate",
        "value": "100.00%",
      },
    ],
    "title": "Activity",
    "type": "kpi",
  },
  {
    "id": "summary.allocation",
    "kpis": [
      {
        "label": "Stablecoin Value",
        "value": "$6,000.00",
      },
      {
        "label": "Non-Stable Value",
        "value": "$4,000.00",
      },
      {
        "label": "Stablecoin Share",
        "value": "60.00%",
      },
      {
        "label": "Non-Stable Share",
        "value": "40.00%",
      },
      {
        "label": "Largest Holding",
        "value": "USDT (60.00%)",
      },
    ],
    "title": "Allocation",
    "type": "kpi",
  },
  {
    "id": "summary.exposure",
    "kpis": [
      {
        "label": "Long",
        "value": "$5,400.00",
      },
      {
        "label": "Short",
        "value": "$2,550.00",
      },
      {
        "label": "Net",
        "value": "$2,850.00",
      },
      {
        "label": "Concentration Band",
        "value": "high",
      },
    ],
    "title": "Exposure",
    "type": "kpi",
  },
  {
    "id": "summary.risk",
    "kpis": [
      {
        "label": "Weighted Avg Leverage",
        "value": "2.68x",
      },
      {
        "label": "Max Leverage",
        "value": "3.00x",
      },
      {
        "label": "Notional / Equity",
        "value": "79.50%",
      },
      {
        "label": "Unrealized Loss / Equity",
        "value": "0.00%",
      },
      {
        "label": "Capital Efficiency",
        "value": "unsupported",
      },
    ],
    "title": "Risk",
    "type": "kpi",
  },
  {
    "id": "summary.open_positions",
    "table": {
      "emptyMessage": "No open positions",
      "emptyMode": "message_only",
      "headers": [
        "Symbol",
        "Side",
        "Notional",
        "UPnL",
        "Leverage",
        "Price Source",
      ],
      "rows": [
        [
          "BTCUSDT",
          "long",
          "$5,400.00",
          "$120.00",
          "3.00x",
          "mark",
        ],
        [
          "ETHUSDT",
          "short",
          "-$2,550.00",
          "$60.00",
          "2.00x",
          "mark",
        ],
      ],
    },
    "title": "Open Positions",
    "type": "table",
  },
  {
    "id": "summary.top_holdings",
    "table": {
      "emptyMessage": "No token holdings",
      "headers": [
        "Asset",
        "USD Value",
        "Share of Equity",
      ],
      "rows": [
        [
          "USDT",
          "$6,000.00",
          "60.00%",
        ],
        [
          "BTC",
          "$3,600.00",
          "36.00%",
        ],
        [
          "ETH",
          "$400.00",
          "4.00%",
        ],
      ],
    },
    "title": "Top Holdings",
    "type": "table",
  },
  {
    "id": "summary.symbol_pnl",
    "table": {
      "emptyMessage": "No symbol PnL in the selected period",
      "headers": [
        "Symbol",
        "Realized",
        "Unrealized",
        "Net",
        "Trades",
      ],
      "rows": [
        [
          "BTCUSDT",
          "$300.00",
          "$120.00",
          "$420.00",
          "8",
        ],
        [
          "ETHUSDT",
          "-$20.00",
          "$60.00",
          "$40.00",
          "5",
        ],
      ],
    },
    "title": "Symbol PnL",
    "type": "table",
  },
  {
    "id": "summary.bots",
    "table": {
      "emptyMessage": "No tracked bots",
      "emptyMode": "message_only",
      "headers": [
        "Bot",
        "Status",
        "Allocated",
        "Exposure",
        "Realized",
        "Unrealized",
        "ROI",
      ],
      "rows": [],
    },
    "title": "Bots",
    "type": "table",
  },
  {
    "alerts": [
      {
        "message": "Largest position exceeds 35% of equity",
        "severity": "warning",
      },
    ],
    "id": "summary.alerts",
    "title": "Alerts",
    "type": "alerts",
  },
  {
    "alerts": [
      {
        "message": "State: complete",
        "severity": "info",
      },
      {
        "message": "Issues: 0",
        "severity": "info",
      },
      {
        "message": "No data completeness issues.",
        "severity": "info",
      },
    ],
    "id": "summary.data_completeness",
    "title": "Data Completeness",
    "type": "alerts",
  },
]
`;

exports[`SummaryReportGenerator schema stability produces stable snapshots for spot category sections 1`] = `
[
  {
    "id": "summary.contract",
    "text": [
      "Summary scope: market activity account review.",
      "Context: spot / market",
      "Live snapshot as of: 2026-01-31T00:00:00.000Z",
      "Coverage: trading activity and account PnL over the requested window",
      "Spot limitation: Spot market exposure/risk is unsupported: spot balances are not modeled as exposure-bearing positions.",
      "Live metrics: balances, holdings, exposure, risk, and open positions.",
      "Period: 2026-01-01T00:00:00.000Z -> 2026-01-31T00:00:00.000Z",
      "Period end-state: unsupported — Historical period end-state is unavailable",
      "ROI status: unsupported",
      "ROI unsupported reason: ending equity is unavailable for the requested period window",
      "This summary emphasizes account equity, trading activity, and period PnL.",
    ],
    "title": "Summary Context",
    "type": "text",
  },
  {
    "id": "summary.overview",
    "kpis": [
      {
        "label": "Total Equity",
        "value": "$8,000.00",
      },
      {
        "label": "Net PnL",
        "value": "$65.00",
      },
      {
        "label": "Realized PnL",
        "value": "$70.00",
      },
      {
        "label": "Unrealized PnL",
        "value": "$0.00",
      },
      {
        "label": "ROI",
        "value": "unsupported",
      },
      {
        "label": "Tracked Bots",
        "value": "0",
      },
    ],
    "title": "Overview",
    "type": "kpi",
  },
  {
    "id": "summary.activity",
    "kpis": [
      {
        "label": "Traded Symbols",
        "value": "1",
      },
      {
        "label": "Total Trades",
        "value": "6",
      },
      {
        "label": "Winning Symbols",
        "value": "1",
      },
      {
        "label": "Losing Symbols",
        "value": "0",
      },
      {
        "label": "Symbol Win Rate",
        "value": "100.00%",
      },
    ],
    "title": "Activity",
    "type": "kpi",
  },
  {
    "id": "summary.allocation",
    "kpis": [
      {
        "label": "Stablecoin Value",
        "value": "$5,000.00",
      },
      {
        "label": "Non-Stable Value",
        "value": "$3,000.00",
      },
      {
        "label": "Stablecoin Share",
        "value": "62.50%",
      },
      {
        "label": "Non-Stable Share",
        "value": "37.50%",
      },
      {
        "label": "Largest Holding",
        "value": "USDT (62.50%)",
      },
    ],
    "title": "Allocation",
    "type": "kpi",
  },
  {
    "id": "summary.exposure",
    "kpis": [
      {
        "label": "Long",
        "value": "unsupported",
      },
      {
        "label": "Short",
        "value": "unsupported",
      },
      {
        "label": "Net",
        "value": "unsupported",
      },
      {
        "label": "Concentration Band",
        "value": "unsupported",
      },
    ],
    "title": "Exposure",
    "type": "kpi",
  },
  {
    "id": "summary.risk",
    "kpis": [
      {
        "label": "Weighted Avg Leverage",
        "value": "unsupported",
      },
      {
        "label": "Max Leverage",
        "value": "unsupported",
      },
      {
        "label": "Notional / Equity",
        "value": "unsupported",
      },
      {
        "label": "Unrealized Loss / Equity",
        "value": "unsupported",
      },
      {
        "label": "Capital Efficiency",
        "value": "unsupported",
      },
    ],
    "title": "Risk",
    "type": "kpi",
  },
  {
    "id": "summary.open_positions",
    "table": {
      "emptyMessage": "Spot limitation: Spot market exposure/risk is unsupported: spot balances are not modeled as exposure-bearing positions.",
      "emptyMode": "message_only",
      "headers": [
        "Symbol",
        "Side",
        "Notional",
        "UPnL",
        "Leverage",
        "Price Source",
      ],
      "rows": [],
    },
    "title": "Open Positions",
    "type": "table",
  },
  {
    "id": "summary.top_holdings",
    "table": {
      "emptyMessage": "No token holdings",
      "headers": [
        "Asset",
        "USD Value",
        "Share of Equity",
      ],
      "rows": [
        [
          "USDT",
          "$5,000.00",
          "62.50%",
        ],
        [
          "SOL",
          "$3,000.00",
          "37.50%",
        ],
      ],
    },
    "title": "Top Holdings",
    "type": "table",
  },
  {
    "id": "summary.symbol_pnl",
    "table": {
      "emptyMessage": "No symbol PnL in the selected period",
      "headers": [
        "Symbol",
        "Realized",
        "Unrealized",
        "Net",
        "Trades",
      ],
      "rows": [
        [
          "SOLUSDT",
          "$70.00",
          "$0.00",
          "$65.00",
          "6",
        ],
      ],
    },
    "title": "Symbol PnL",
    "type": "table",
  },
  {
    "id": "summary.bots",
    "table": {
      "emptyMessage": "No tracked bots",
      "emptyMode": "message_only",
      "headers": [
        "Bot",
        "Status",
        "Allocated",
        "Exposure",
        "Realized",
        "Unrealized",
        "ROI",
      ],
      "rows": [],
    },
    "title": "Bots",
    "type": "table",
  },
  {
    "alerts": [
      {
        "message": "Spot limitation: Spot market exposure/risk is unsupported: spot balances are not modeled as exposure-bearing positions.",
        "severity": "warning",
      },
    ],
    "id": "summary.alerts",
    "title": "Alerts",
    "type": "alerts",
  },
  {
    "alerts": [
      {
        "message": "State: complete",
        "severity": "info",
      },
      {
        "message": "Issues: 0",
        "severity": "info",
      },
      {
        "message": "No data completeness issues.",
        "severity": "info",
      },
      {
        "message": "Spot limitation: Spot market exposure/risk is unsupported: spot balances are not modeled as exposure-bearing positions.",
        "severity": "info",
      },
    ],
    "id": "summary.data_completeness",
    "title": "Data Completeness",
    "type": "alerts",
  },
]
`;

exports[`SummaryReportGenerator schema stability produces stable snapshots for bot source mode sections 1`] = `
[
  {
    "id": "summary.contract",
    "text": [
      "Summary scope: bot-oriented account review.",
      "Context: linear / bot",
      "Live snapshot as of: 2026-01-31T00:00:00.000Z",
      "Coverage: bot performance and account PnL over the requested window",
      "Note: wallet equity may exclude capital currently managed inside bot allocations.",
      "Live metrics: wallet balances, holdings, bot exposure, and bot status.",
      "Period: 2026-01-01T00:00:00.000Z -> 2026-01-31T00:00:00.000Z",
      "Period end-state: unsupported — Historical period end-state is unavailable",
      "ROI status: unsupported",
      "ROI unsupported reason: ending equity is unavailable for the requested period window",
      "This summary emphasizes bot capital, bot PnL, and wallet context.",
    ],
    "title": "Summary Context",
    "type": "text",
  },
  {
    "id": "summary.overview",
    "kpis": [
      {
        "label": "Wallet Equity",
        "value": "$12,000.00",
      },
      {
        "label": "Bot Allocated",
        "value": "$1,500.00",
      },
      {
        "label": "Bot Exposure",
        "value": "$1,850.00",
      },
      {
        "label": "Bot Net PnL",
        "value": "$95.00",
      },
      {
        "label": "Tracked Bots",
        "value": "1",
      },
      {
        "label": "ROI",
        "value": "unsupported",
      },
    ],
    "title": "Overview",
    "type": "kpi",
  },
  {
    "id": "summary.activity",
    "kpis": [
      {
        "label": "Tracked Symbols",
        "value": "1",
      },
      {
        "label": "Running Bots",
        "value": "1",
      },
      {
        "label": "Bots in Profit",
        "value": "1",
      },
      {
        "label": "Bots in Loss",
        "value": "0",
      },
      {
        "label": "Open Positions",
        "value": "0",
      },
      {
        "label": "Bot Win Rate",
        "value": "100.00%",
      },
    ],
    "title": "Activity",
    "type": "kpi",
  },
  {
    "id": "summary.allocation",
    "kpis": [
      {
        "label": "Stablecoin Value",
        "value": "$12,000.00",
      },
      {
        "label": "Non-Stable Value",
        "value": "$0.00",
      },
      {
        "label": "Stablecoin Share",
        "value": "100.00%",
      },
      {
        "label": "Non-Stable Share",
        "value": "0.00%",
      },
      {
        "label": "Largest Holding",
        "value": "USDT (100.00%)",
      },
    ],
    "title": "Allocation",
    "type": "kpi",
  },
  {
    "id": "summary.exposure",
    "kpis": [
      {
        "label": "Long",
        "value": "$5,400.00",
      },
      {
        "label": "Short",
        "value": "$2,550.00",
      },
      {
        "label": "Net",
        "value": "$2,850.00",
      },
      {
        "label": "Concentration Band",
        "value": "high",
      },
    ],
    "title": "Exposure",
    "type": "kpi",
  },
  {
    "id": "summary.risk",
    "kpis": [
      {
        "label": "Weighted Avg Leverage",
        "value": "2.68x",
      },
      {
        "label": "Max Leverage",
        "value": "3.00x",
      },
      {
        "label": "Notional / Equity",
        "value": "66.25%",
      },
      {
        "label": "Unrealized Loss / Equity",
        "value": "0.00%",
      },
      {
        "label": "Capital Efficiency",
        "value": "unsupported",
      },
    ],
    "title": "Risk",
    "type": "kpi",
  },
  {
    "id": "summary.open_positions",
    "table": {
      "emptyMessage": "No open positions",
      "emptyMode": "message_only",
      "headers": [
        "Symbol",
        "Side",
        "Notional",
        "UPnL",
        "Leverage",
        "Price Source",
      ],
      "rows": [
        [
          "BTCUSDT",
          "long",
          "$5,400.00",
          "$120.00",
          "3.00x",
          "mark",
        ],
        [
          "ETHUSDT",
          "short",
          "-$2,550.00",
          "$60.00",
          "2.00x",
          "mark",
        ],
      ],
    },
    "title": "Open Positions",
    "type": "table",
  },
  {
    "id": "summary.top_holdings",
    "table": {
      "emptyMessage": "No token holdings",
      "headers": [
        "Asset",
        "USD Value",
        "Share of Equity",
      ],
      "rows": [
        [
          "USDT",
          "$12,000.00",
          "100.00%",
        ],
      ],
    },
    "title": "Top Holdings",
    "type": "table",
  },
  {
    "id": "summary.symbol_pnl",
    "table": {
      "emptyMessage": "No symbol PnL in the selected period",
      "headers": [
        "Symbol",
        "Realized",
        "Unrealized",
        "Net",
        "Trades",
      ],
      "rows": [
        [
          "BTCUSDT",
          "$300.00",
          "$120.00",
          "$420.00",
          "8",
        ],
        [
          "ETHUSDT",
          "-$20.00",
          "$60.00",
          "$40.00",
          "5",
        ],
      ],
    },
    "title": "Symbol PnL",
    "type": "table",
  },
  {
    "id": "summary.bots",
    "table": {
      "emptyMessage": "No tracked bots",
      "emptyMode": "message_only",
      "headers": [
        "Bot",
        "Status",
        "Allocated",
        "Exposure",
        "Realized",
        "Unrealized",
        "ROI",
      ],
      "rows": [
        [
          "BTC Grid",
          "running",
          "$1,500.00",
          "$1,850.00",
          "$75.00",
          "$20.00",
          "6.33%",
        ],
      ],
    },
    "title": "Bots",
    "type": "table",
  },
  {
    "alerts": [
      {
        "message": "Largest position exceeds 35% of equity",
        "severity": "warning",
      },
    ],
    "id": "summary.alerts",
    "title": "Alerts",
    "type": "alerts",
  },
  {
    "alerts": [
      {
        "message": "State: partial_optional",
        "severity": "warning",
      },
      {
        "message": "Issues: 1",
        "severity": "info",
      },
      {
        "message": "optional_item_failed (unknown, optional): Bot equity source lagged by one polling interval",
        "severity": "warning",
      },
    ],
    "id": "summary.data_completeness",
    "title": "Data Completeness",
    "type": "alerts",
  },
]
`;
